[gd_scene load_steps=3 format=3 uid="uid://clo17y46bpw1"]

[ext_resource type="Script" path="res://Entities/player_trigger_zone.gd" id="1_w0iww"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qu5rp"]
size = Vector2(800, 20)

[node name="PlayerTriggerZone" type="Node2D"]
script = ExtResource("1_w0iww")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qu5rp")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
